--- a/chat-ui/src/app.html
+++ b/chat-ui/src/app.html
@@ -5,11 +5,10 @@
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Noto Serif' rel='stylesheet'>
-	<link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet'>  <!-- this one is just for testing -->
 	<meta name="viewport" content="width=device-width" />
 	%sveltekit.head%
 </head>
-<body data-sveltekit-prefetch class="dark:bg-gray-5 bg-gradient-to-tl from-roche-blue from-2% via-neutral-4 via-50% to-neutral-3 to-98%">
+<body data-sveltekit-prefetch class="dark:bg-gray-5">
 <div>%sveltekit.body%</div>
 </body>
 </html>
